--- a/config/config.yaml
+++ b/config/config.yaml
@@ -146,7 +146,8 @@ gene_info_file:
 heatmaps:
   scales: "default" #options: [ 'default' = default scaling from deeptools, one scale for all samples | 'sample' = each sample on its own scale | 'type' = each type of data on a different scale (each ChIP mark + each TF + RNA + sRNA + each mC context) ]
   stranded_heatmaps: true # chose whether the heatmap should be done with stranded information or not. If true, lines in the bedfile without strand information (6th column "+" or "-") will not be included.
-  plot_params: 
+  sort_options: "mean" #options: [ 'no', 'mean', median' ]; mean = "--sortRegions descend --sortUsing mean"
+  plot_params:
     all: "--colorMap 'seismic' --interpolationMethod 'bilinear'"
     ChIP: "--colorMap 'seismic' --interpolationMethod 'bilinear'"
     TF: "--colorMap 'seismic' --interpolationMethod 'bilinear'"
