--- a/config/config.yaml
+++ b/config/config.yaml
@@ -154,17 +154,20 @@ heatmaps:
     RNAseq: "--colorMap 'seismic' --interpolationMethod 'bilinear'"
     sRNA: "--colorMap 'seismic' --interpolationMethod 'bilinear'"
     mC: "--colorMap 'Oranges' --missingDataColor 'grey' --interpolationMethod 'nearest'"
-  regions: "scale-regions -q --missingDataAsZero --skipZeros"
+  regions: 
+    base: "scale-regions -q --missingDataAsZero --skipZeros"
     bs: 50
     before: 2000
     middle: "-m 5000"
     after: 2000
-  tss: "reference-point --referencePoint "TSS" -q --missingDataAsZero --skipZeros"
+  tss: 
+    base: "reference-point --referencePoint "TSS" -q --missingDataAsZero --skipZeros"
     bs: 50
     before: 2000
     middle: ""
     after: 6000
-  tes: "reference-point --referencePoint "TES" -q --missingDataAsZero --skipZeros"
+  tes: 
+    base: "reference-point --referencePoint "TES" -q --missingDataAsZero --skipZeros"
     bs: 50
     before: 6000
     middle: ""
