--- a/config/config.yaml
+++ b/config/config.yaml
@@ -147,7 +147,8 @@ gene_info_file:
 heatmaps:
   scales: "default" # options: [ 'default' = default scaling from deeptools, one scale for all samples | 'sample' = each sample on its own scale | 'type' = each type of data on a different scale (each ChIP mark + each TF + RNA + sRNA + each mC context) ]
   stranded_heatmaps: true # chose whether the heatmap should be done with stranded information or not. If true, lines in the bedfile without strand information (6th column "+" or "-") will not be included.
-  sort_options: "mean" # options: [ 'no', 'mean', median' ]; mean = "--sortRegions descend --sortUsing mean"
+  sort_options: "mean" # options: [ 'no' | 'mean' | median' ]; mean = "--sortRegions descend --sortUsing mean"
+  profile_scale: "mean" # options: [ 'mean' | median' ] 
   plot_params:
     all: "--colorMap 'seismic' --interpolationMethod 'bilinear'"
     ChIP: "--colorMap 'seismic' --interpolationMethod 'bilinear'"
