--- a/profiles/cluster.yaml
+++ b/profiles/cluster.yaml
@@ -104,4 +104,5 @@ merging_matrix: *single
 computing_matrix_scales: *single
 sort_heatmap: *single
 plotting_heatmap_on_targetfile: *single
+plotting_sorted_heatmap_on_targetfile: *single
 plotting_profile_on_targetfile: *single
