--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -6,6 +6,7 @@ import sys
 import re
 from snakemake.utils import min_version
 from itertools import combinations
+from collections import defaultdict
 
 min_version("6.0")
 
